--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.nuodb.hibernate</groupId>
+            <artifactId>nuodb-hibernate</artifactId>
+            <version>${nuodb.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>javax.el</groupId>
             <artifactId>javax.el-api</artifactId>
             <version>${javax.el.version}</version>
@@ -181,6 +187,13 @@
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
             <version>${mssql.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.nuodb.jdbc</groupId>
+            <artifactId>nuodb-jdbc</artifactId>
+            <version>${nuodb.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -333,6 +346,7 @@
         <!--<oracle.version>11.2.0.4</oracle.version>-->
         <mysql.version>5.1.38</mysql.version>
         <mssql.version>6.1.0.jre8</mssql.version>
+        <nuodb.version>3.0.2</nuodb.version>
         <jtds.version>1.3.1</jtds.version>
 
         <javax.el.version>2.2.4</javax.el.version>
